feat: added policy endpoint
