# docs/swagger.json
@@ -111,6 +111,24 @@
                     }
                 }
             }
+        },
+        "/policies": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Returns policies of garm",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "policy"
+                ],
+                "summary": "Policies for all services",
+                "responses": {}
+            }
         }
     },
     "definitions": {
